# Kindred

./: .gitignore  CMakeLists.txt  Makefile  a.out  compile.sh  compiled.s  ex.kd  example  example.kd  example.s  iss_todo.txt  kdc  kdc.cpp  kdc.py  kindred.md  lexer.cpp  location.hh  main  main.cpp  parser.cpp  parser.hpp  parser.output  parser.tab.cc  parser.tab.hh  todo.txt
.archive/: note.txt
.archive/src/Lexer/: Lexer.x
aux/: ir_representation.txt
main.dSYM/Contents/Resources/DWARF/: main
samples/: atoi.kd  call.kd  closure.kd  example.kd  factorial.kd  nested_call.kd  register.kd  shift.kd  simple.kd  tree.kd
src/: ast.hpp  cfg_builder.cpp  cfg_builder.hpp  closure.cpp  closure.hpp  compile_flags.hpp  flowcheck.cpp  flowcheck.hpp  interf_graph.hpp  ir_lower.cpp  ir_lower.hpp  lex.yy.cc  lexer.l  liveness.cpp  liveness.hpp  parser.cpp  parser.y  semerror.cpp  semerror.hpp  tac_ir.hpp  tokens.hpp  typecheck.cpp  typecheck.hpp  types.cpp  types.hpp  visitor.cpp  visitor.hpp
src/opt/: constant_fold.cpp  constant_fold.hpp
src/parse/: lexer.l  parser.y
src/x86/: x86_codegen.cpp  x86_codegen.hpp  x86_lower.cpp  x86_lower.hpp  x86_regalloc.cpp  x86_regalloc.hpp
sys_lib/: closure.c  closure.h  closure_gen.c  iofunc.c  iofunc.h  lists.c  lists.h  math.c  mem.c  mem.h  object.c  object.h  struct_gen.c  structs.c  structs.h
